--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>ts-template</title>
+        <title>classickartan</title>
         <script src="./dist/bundle.js" type="text/javascript"></script>
         <link rel="stylesheet" href="./styles.css">
     </head>
