--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>classickærten</title>
+        <title>Classickærten</title>
         <script src="./dist/bundle.js" type="text/javascript"></script>
-        <link rel="stylesheet" href="./styles.css">
         <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+        <link rel="stylesheet" href="./styles.css">
+        <link rel="icon" href="./img/classic-logo.png" type="image/x-icon" />
     </head>
     <body>
-        <h1>Classickærten</h1>
+        <div id="header">
+            <img id="logo" src="./img/classic-kartan-logo.png" alt="Classic Logo">
+        </div>
         <div id="map"></div>
+        <div id="footer"></div>
     </body>
 </html>
