--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
             integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
         <link rel="stylesheet" href="./styles.css">
         <link rel="icon" href="./img/classic-logo.png" type="image/x-icon" />
+
+        <!-- Meta Tags -->
+        <meta property="og:title" id="meta-og-title" content="Classickærten.net" />
+        <meta property="og:description" id="meta-og-description" content="Hitta en Tuborg Classic nära dig!" />
+        <meta property="og:image" id="meta-og-image" content="https://classickærten.net/img/classic-kartan-logo.png" />
+        <meta property="og:url" id="meta-og-url" content="https://classickærten.net" />
+
     </head>
     <body>
         <div id="header">
