--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <meta property="og:description" id="meta-og-description" content="Hitta en Tuborg Classic nära dig!" />
         <meta property="og:image" id="meta-og-image" content="https://classickærten.net/img/classic-kartan-logo.png" />
         <meta property="og:url" id="meta-og-url" content="https://classickærten.net" />
+        <meta property="og:type" content="website" />
 
     </head>
     <body>
