add common and remove logo

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
         
         <div id="header">
-            <img id="logo" src="./img/classic-kartan-logo.png" alt="Classickartan - Classickærten logo, Map of Tuborg Classic locations in Sweden, Karta över Tuborg Classic i Sverige">
+            <!-- <img id="logo" src="./img/classic-kartan-logo.png" alt="Classickartan - Classickærten logo, Map of Tuborg Classic locations in Sweden, Karta över Tuborg Classic i Sverige"> -->
         </div>
         <div id="map" role="application" aria-label="Interactive map showing Tuborg Classic locations in Sweden - Classickartan"></div>
         <div id="footer"></div>
